Modify text overflow issue

--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,41 @@
 h4 {
     margin: 0.1rem 0 0 0;
+    width: 12rem;
+    white-space: nowrap;
 }
+
 ul {
     margin: 0.3rem 0 0 0.8rem;
     padding: 0 0.5rem 0.3rem 0.8rem;
     list-style: none;
     display: none;
 }
+
 li {
     margin: 0.5rem 0 0 0;
 }
+
 #main-area {
     width: 14.6rem;
     height: auto;
     margin: 1.5rem auto;
 }
+
 .connect-line {
     background: green;
     width: 0.3rem;
-    height: 46rem;
+    height: 46.2rem;
     position: absolute;
     z-index: -999;
     margin-left: 0.5rem;
 }
+
 .bus-info {
     display: flex;
     flex-wrap: wrap;
     margin-top: 1.4rem;
 }
+
 .bus-station-icon {
     margin-right: 0.3rem;
     width: 1.3rem;
